# darklab_examples

./: README.md
decorators/: decorated_descriptor.py  decorated_descriptor_in_class_instance.py  decorated_properties.py  decorator_with_parameters.py
git/: add_changes_to_first_commit.md
latex/: .gitignore  123.tex  3.tex
linux/git-crypt/: README.md
nginx/self-signed-nginx/: README.md  default.conf  docker-compose.yml  run.sh
python/c_extensions/bridge_with_golang/: .gitignore  README.md  Taskfile.yml  library.go  main.py
python/c_extensions/cython_example/: .gitignore  Makefile  app.py  hello.pyx  imported_world.pyx  pyproject.toml  setup.py
python/celerylite/: Dockerfile  Taskfile.yml  app.py  constraints.txt  docker-compose.yml  redis.conf  requirements.txt
python/decorators/: decorator_revealer.py
python/help/help_to_zhabiboss/: after.py  app.py  before.py  pyproject.toml
python/mkdocs/: mkdocs.yml
python/mkdocs/docs/: index.md  subpage.md
python_c_extensions/: .gitignore  README.md  fizbuzz_pure.py  fizz.c  fizz.h  fizz_extension_build.py  fizz_run.py  make.py  pi_app.py  setup.py
python_c_extensions/fizzbuzz_python_only/: main.py
python_c_extensions/fizzbuzz_python_with_c_extension/: __init__.py  fizz_run.py
python_c_extensions/simple_python_with_c_extension/: pi_app.py
sql/pgadmin/: README.md  docker-compose.yml  install  pgadmin.service
sql/postgresql/: README.md  docker-compose.yml
symlinks/: .gitignore  README.md
unittest_autodiscovery/: make.py
unittest_autodiscovery/tests/: __init__.py  test_abc.py  test_asd.py
(+5 files in other folders)
