[tool.poetry]
name = "cython-example"
version = "0.1.0"
description = ""
authors = ["dd84ai <dd84ai@gmail.com>"]
readme = "README.md"
packages = [{include = "cython_example"}]

[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.32"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
